# job_mobile

./: .gitignore
baseball/src/server/branches/apply_game_template2/: CMakeLists.txt  T_MSG.vcproj  T_baseball.vcproj  getsvn.cmake  sh.baseball  sh.clear_file_db  sh.dev  sh.gatelog  sh.qa.gamelog  sh.restart  sh.start  sh.svc_link  sh.sync_bin  sh.test  svn_version.hpp
baseball/src/server/branches/apply_game_template2/MOB_lib/: DBHelper.h  common_define_const.h  common_typedef.h  common_util.h  jUser_GameRoomInfo.cpp  jUser_GameRoomInfo.h  jUser_base.h  nBASE_BALL.cpp  nBASE_BALL.h  nMOB.cpp  nMOB.h  stdafx.cpp  stdafx.h  test.cpp
baseball/src/server/branches/apply_game_template2/MOB_lib/common/: config_all_server.h  jILog.h  jxVar.cpp
baseball/src/server/branches/apply_game_template2/MOB_lib/excel/: db_type.h  excel_all.h  jDebugPrint.h
baseball/src/server/branches/apply_game_template2/etc/: baseball_game  baseball_gateway  icandoit-mac.local.baseball_game  icandoit-mac.local.baseball_gateway  mob-yongs-mac.local.baseball_game  mob-yongs-mac.local.baseball_gateway
baseball/src/server/branches/apply_game_template2/etc/csv/: file_Sys_Batter_Animation.csv  file_Sys_BreakingBallUpgrade.csv  file_Sys_Error.csv  file_Sys_ItemConsume.csv  file_Sys_MainItemAbility.csv  file_Sys_Package.csv  file_Sys_Pitcher_Animation.csv  file_Sys_PlayerLevel.csv  file_Sys_PlayerSkillSticker.csv  file_Sys_Quest.csv  file_Sys_Runner_State.csv  file_Sys_Shop_Explain_String.csv  file_Sys_String.csv  file_Sys_String_Kor.csv  file_Sys_String_Usa.csv  file_Sys_SubItemAbility.csv  file_Sys_T_Test4.csv  file_Sys_TestError.csv  file_Sys_Umpire_Animation.csv
baseball/src/server/branches/apply_game_template2/etc/sqlite_db/: Create_Tbl_Item_Admin.sql  Create_Tbl_PitcherSkill.sql  Create_Tbl_PlayerBetter.sql  Create_Tbl_PlayerPitcher.sql  Create_Tbl_Result.sql  Create_Tbl_RoundResult.sql  Create_Tbl_Team.sql  Create_Tbl_User.sql  Create_Tbl__PlayerBase.sql  create_tables.sh  drop_tables.sh
baseball/src/server/branches/apply_game_template2/etc/xml/: baseball.xml  baseball_ConsoleVar.xml
baseball/src/server/branches/apply_game_template2/game/: CMakeLists.txt  PT_BaseballServer.proto  PT_BaseballServer.proto.h  PT_UserGateServer.proto  PT_UserGateServer.proto.h  baseball_room.cpp  baseball_room.h  baseball_user.cpp  baseball_user.h  dump.cpp  dump.h  excel_baseball_table_db.proto  gameLogic.proto  main.cpp  make_protocs.bat  recv_Client_BaseballServer.cpp  recv_UserGateServer_BaseballServer.cpp  room.cpp  room.h  stdafx.h  user.cpp  user.h
baseball/src/server/branches/apply_game_template2/gateway/: CMakeLists.txt  baseball_db.cpp  baseball_db.h  baseball_db_shop_interface.h  baseball_db_sqlite.h  baseball_db_sqlite_query_impl.h  baseball_db_sqlite_shop_impl.cpp  database.cpp  database.hpp  jUser.cpp  jUser.h  main.cpp  nDB.cpp  nDB.h  nREDIS.cpp  recv_BaseballServer_UserGateServer.cpp  recv_Client_UserGateServer.cpp  sqlite_create_table.sql  stdafx.h
baseball/src/server/branches/apply_game_template2/presence/: config.py  makefile  presence.py  pserver.py
baseball/src/server/trunk/MOB_lib/: CMakeLists.txt  DBHelper.h  common_typedef.h  common_util.h  jUser_GameRoomInfo.h  jUser_base.h  nBASE_BALL.cpp  nBASE_BALL.h  nMOB.cpp  nMOB.h  protoHelper.h
baseball/src/server/trunk/MOB_lib/common/: jBase_Log.cpp  jBase_Log.h  jILog.h  jILog.txt  jxVar.h
baseball/src/server/trunk/MOB_lib/excel/: db_uid_type.h  excel_all.cpp  excel_code_util.h  excel_custom_code.cpp  excel_custom_code.h  net_common_code.h
common/Server/GameServer/BaseballServer/BaseballServer/: BB_MessageList.h  BB_Plugin_Connection.cpp  BB_Plugin_Connection.h  BB_Plugin_NetIOModel.cpp  BB_Plugin_NetIOModel.h  BB_Room.cpp  BB_Room.h  BB_header.h  BaseballServer.vcproj  CMakeLists.txt  MOB_template_code.cpp  Makefile  main.cpp  recv_GLReqGameProtocol.cpp  stdafx.h
common/Server/GameServer/BaseballServer/BaseballServer/excel/: db_type.h  excel_all.cpp  excel_all.h  excel_code_util.h  excel_custom_code.cpp  excel_custom_code.h
common/Server/GameServer/BaseballServer/BaseballServer/protobuf/: db.pb.h  game.pb.cpp  game.pb.h  gameLogic.pb.h
common/Server/GameServer/MOB_lib/: CMakeLists.txt  MOB_Connection.cpp  MOB_Connection.h  MOB_NetIOModel.cpp  MOB_NetIOModel.h  MOB_lib.vcproj  MOB_net.cpp  MOB_net.h  MOB_net_define.h  MOB_net_interface.h  MOB_room.h  MOB_room_cpp.h  ReadMe.txt  a_cmake  stdafx.cpp  stdafx.h
common/Server/GameServer/MOB_lib/common/: config_all_server.h  jBase_Log.cpp  jBase_Log.h  jILog.h
common/Server/GameServer/MOB_lib/common/header/: SYSTEMTIME.h  ToString_base.h  UFile.h  jBoost.h  jCSV_File.h  jDefine.h  jDefine_enum.h  jDefine_lamda.h  jDefine_log.h  jFileName.h  jHeader.h  jInterface.h  jQueue.h  jSington.h  jTreeNode.h  jTypedef_struct.h  jTypedef_type.h  m_stltag.h  nNET_DebugPrint.h  nPatriciaTrie.h  string_util.h  uStringParsor.h  uString_stl.h
common/Server/GameServer/MOB_lib/common/linux/: linux_filesystem.cpp  nOS_filesystem.h
common/Server/GameServer/PokerServer/PokerServer/: CMakeLists.txt  MOB_template_code.cpp  PK_Plugin_Connection.cpp  PK_Plugin_Connection.h  PK_Plugin_MessageList.h  PK_Plugin_NetIOModel.cpp  PK_Plugin_NetIOModel.h  PK_Room.cpp  PK_Room.h  PK_header.h  PokerServer.vcproj  ReadMe.txt  main.cpp  recv_GLReqGameProtocol.cpp  stdafx.cpp  stdafx.h  targetver.h
common/Server/GameServer/PokerServer/PokerServer/PB_Server/: CMakeLists.txt  GameCommon.h  a_cmake.sh
common/Server/GameServer/PokerServer/PokerServer/protobuf/: db.pb.cc  game.pb.cpp  game.pb.h  gameLogic.pb.cpp  gameLogic.pb.h  ug.pb.h
common/Server/GameServer/SampleServer/SampleServer/: CMakeLists.txt  MOB_template_code.cpp  SAMPLE_MessageList.h  SAMPLE_Plugin_Connection.cpp  SAMPLE_Plugin_Connection.h  SAMPLE_Plugin_NetIOModel.cpp  SAMPLE_Plugin_NetIOModel.h  SAMPLE_Room.cpp  SAMPLE_Room.h  SAMPLE_header.h  SampleServer.vcproj  main.cpp  recv_GLReqGameProtocol.cpp  resource.h  stdafx.h
common/Server/GameServer/SampleServer/SampleServer/protobuf/: game.pb.cpp  game.pb.h  gameLogic.pb.cc  ug.pb.cc  ug.pb.h
(+10792 files in other folders)
