cmake_minimum_required(VERSION 2.8)


PROJECT(baseball)

ADD_CUSTOM_TARGET(revision)

ADD_CUSTOM_COMMAND(TARGET revision COMMAND ${CMAKE_COMMAND}
   -DSOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR}
               -P ${CMAKE_CURRENT_SOURCE_DIR}/getsvn.cmake)

LINK_DIRECTORIES(/usr/local/lib)

ADD_SUBDIRECTORY (MOB_lib)

ADD_SUBDIRECTORY(game)

ADD_SUBDIRECTORY(gateway)

